# git-metarepo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: pythonpackage.yml
metarepo/: cli.py  cli_decorators.py  manifest.py  ui.py  vcs_git.py
metarepo/commands/: init_cmd.py  list_cmd.py  status_cmd.py  sync_cmd.py
multirepo/: cli.py  cli_decorators.py  manifest.py  ui.py  vcs_git.py
multirepo/commands/: list_cmd.py  status_cmd.py  sync_cmd.py
tests/: conftest.py  helpers.py  test_cli.py  test_cli_list.py  test_cli_status.py  test_cli_sync.py  test_manifest.py  test_repotool.py  test_vcs_git.py
