[tool.poetry]
name = "multirepo"
version = "0.1.0"
description = "Git Repository Manager"
authors = ["Jim Persson <jim@nurd.se>"]
license = "MIT"

[tool.poetry.scripts]
multirepo = "multirepo.cli:cli"
git-multirepo = "multirepo.cli:cli"

[tool.poetry.dependencies]
python = "^3.7"
clint = "^0.5.1"
gitpython = "^3.1.0"
cfgv = "^3.1.0"
pyyaml = "^5.3.1"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
tox = "^3.14.5"
pytest = "^5.3.5"
wheel = "^0.34.2"
black = "^19.10b0"
pre-commit = "^2.2.0"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
